@startuml

entity users {
    * id BIGINT PRIMARY KEY
    --
    * is_admin BOOLEAN
    * active_status STRING
    ' active
    ' pending
    * nip BIGINT UNIQUE
    * full_name STRING
    * gender STRING
    * birth DATE
    * address STRING
    * ktp STRING
    * kk STRING
    * photo STRING
    password STRING
    --
    * created_at DATETIME
    * updated_at DATETIME
}

entity activation_log {
    * id BIGINT PRIMARY KEY
    --
    * status STRING
    ' acc
    ' rejected
    ' revoked
    * message TEXT
    --
    * user_id UNSIGNED_BIGINT FOREIGN(users.id)
    --
    * created_at DATETIME
    * updated_at DATETIME
}

entity umkm {
    * id BIGINT PRIMARY KEY
    --
    * name STRING
    * type STRING
    ' koperasi
    ' umkm
    * recomendation_docs STRING
    * status STRING
    ' verified
    ' pending
    ' rejected
    * sub_district STRING
    permission_docs STRING
    --
    * owner_user UNSIGNED_BIGINT FOREIGN(users.id)
    --
    * created_at DATETIME
    * updated_at DATETIME
}

entity solar_recomendation_request {
    * id BIGINT PRIMARY KEY
    --
    * status STRING
    ' pending
    ' proceed
    ' done
    ' rejected
    message TEXT
    --
    * umkm_id UNSIGNED_BIGINT FOREIGN(umkm.id)
    --
    * created_at DATETIME
    * updated_at DATETIME
}

entity solar_recomendation {
    * id BIGINT PRIMARY KEY
    --
    * document_number STRING
    * registration_date DATE
    * expired_date DATE
    solar_recomendation_docs STRING
    --
    request_id UNSIGNED_BIGINT FOREIGN(solar_recomendation_request.id)
    --
    * created_at DATETIME
    * updated_at DATETIME
}

entity umkm_activation_log {
    * id BIGINT PRIMARY KEY
    --
    * status STRING
    ' acc
    ' rejected
    ' revoked
    * message TEXT
    --
    * umkm_id UNSIGNED_BIGINT FOREIGN(umkm.id)
    --
    * created_at DATETIME
    * updated_at DATETIME
}

entity koperasi {
    * id BIGINT PRIMARY KEY
    --
    * name STRING
    * legal_number STRING 
    ' nomor badan hukum
    * legal_date DATE
    * status STRING
    ' verified
    ' pending
    ' rejected
    * address STRING
    * village
    ' kelurahan
    * sub_district STRING
    * city STRING
    --
    * owner_user UNSIGNED_BIGINT FOREIGN(users.id)
    --
    * created_at DATETIME
    * updated_at DATETIME
}

entity koperasi_activation_log {
    * id BIGINT PRIMARY KEY
    --
    * status STRING
    ' acc
    ' rejected
    ' revoked
    * message TEXT
    --
    * koperasi_id UNSIGNED_BIGINT FOREIGN(koperasi.id)
    --
    * created_at DATETIME
    * updated_at DATETIME
}

entity umkm_images{
    * id BIGINT PRIMARY KEY
    --
    * image STRING
    * umkm_id UNSIGNED_BIGINT FOREIGN(umkm.id)
    --
    * created_at DATETIME
    * updated_at DATETIME
}

entity support_programs {
    * id BIGINT PRIMARY KEY
    --
    * program_type STRING
    * name STRING
    * description TEXT
    * active BOOLEAN
    quota INT
    open_date DATE
    end_date DATE
    --
    * created_at DATETIME
    * updated_at DATETIME
}

entity support_program_members {
    * id BIGINT PRIMARY KEY
    --
    * status STRING
    ' pending
    ' verified
    --
    * program_id UNSIGNED_BIGINT FOREIGN(support_programs.id)
    * umkm_id UNSIGNED_BIGINT FOREIGN(umkm.id)
    --
    * created_at DATETIME
    * updated_at DATETIME
}

entity user_notifications {
    * id BIGINT PRIMARY KEY
    --
    * title STRING
    * body TEXT
    * is_read BOOLEAN
    --
    * user_id UNSIGNED_BIGINT FOREIGN(users.id)
    --
    * created_at DATETIME
    * updated_at DATETIME
}

entity news {
    * id BIGINT PRIMARY KEY
    --
    * title STRING
    * body TEXT
    * is_active BOOLEAN
    --
    * created_at DATETIME
    * updated_at DATETIME
}




users ||--o{ user_notifications
users ||--o{ umkm
users ||--o{ koperasi
users ||--o{ activation_log

support_programs ||--o{ support_program_members
umkm ||--o{ support_program_members

umkm ||--o{ umkm_images
umkm ||--o{ umkm_activation_log
umkm ||--o{ solar_recomendation_request
solar_recomendation_request ||--o| solar_recomendation

koperasi ||--o{ koperasi_activation_log

@enduml